docs: python docs, description

--- a/docs/docs/api/client/python/classes/action-chain.mdx
+++ b/docs/docs/api/client/python/classes/action-chain.mdx
@@ -6,6 +6,8 @@ toc_max_heading_level: 4
 
 # ActionChain <s generated />
 
+This class is used when you want to run multiple actions in a row in [`Game Controling`](/docs/client/game-control).
+
 <hr class="solid" />  <s generated />
 
 ## Methods <s generated />
@@ -26,6 +28,14 @@ toc_max_heading_level: 4
 
 <s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <s generated />
 
+Add the action of clicking on the screen coordinates to the Action Chain.
+
+##### Usage
+
+```python
+gamium.actions().click({ x: 0, y: 0 }).perform()
+```
+
 ##### Arguments <s generated />
 
 - position [`Vector2`]( vector2) <s generated />
@@ -37,6 +47,14 @@ toc_max_heading_level: 4
 ### drag <s generated />
 
 <s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <s generated />
+
+Adds an action to ActionChain that drags from one coordinate to another coordinate.
+
+##### Usage
+
+```python
+gamium.actions().drag(Vector2(0, 0), Vector2(0, 10)).perform()
+```
 
 ##### Arguments <s generated />
 
@@ -52,6 +70,14 @@ toc_max_heading_level: 4
 
 <s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <s generated />
 
+Add the action of moving the mouse to a specific coordinate to the Action Chain.
+
+##### Usage
+
+```python
+gamium.actions().move(Vector2(0, 0)).perform()
+```
+
 ##### Arguments <s generated />
 
 - position [`Vector2`]( vector2) <s generated />
@@ -63,6 +89,22 @@ toc_max_heading_level: 4
 ### move_player <s generated />
 
 <s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <s generated />
+
+Adds an action to the Action Chain that moves the Player to a specific position.
+
+##### Usage
+
+```python
+gamium
+  .actions()
+  .move_player(
+    By.path('/PlayerSpawnPoint[1]/WizardCharacter(Clone)[1]'),
+    By.path('/Main Camera[1]'),
+    Vector3(0, 0, 0),
+    MovePlayerOptions(MovePlayerBy.Navigation),
+  )
+  .perform()
+```
 
 ##### Arguments <s generated />
 
@@ -80,6 +122,8 @@ toc_max_heading_level: 4
 
 <s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <s generated />
 
+Request actions registered in the AccrtionChain to 'Gamium Engine'.
+
 ##### Return <s generated />
 
 - [`List`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#sequence-types-list-tuple-range)[`ActionResultT`] <s generated />
@@ -89,6 +133,14 @@ toc_max_heading_level: 4
 ### scroll <s generated />
 
 <s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <s generated />
+
+Adds an action to ActionChain that scrolls by delta from a specific coordinate.
+
+##### Usage
+
+```python
+gamium.actions().scroll(Vector2(0, 0), Vector2(0, 10)).perform()
+```
 
 ##### Arguments <s generated />
 
@@ -104,6 +156,17 @@ toc_max_heading_level: 4
 
 <s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <s generated />
 
+Adds an action to ActionChain that causes specific keystrokes to occur.
+
+##### Usage
+
+```python
+game
+  .actions()
+  .send_keys([KeyBy.unity_keycode('Space')])
+  .perform()
+```
+
 ##### Arguments <s generated />
 
 - by_list [`List`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#sequence-types-list-tuple-range)[[`KeyBy`]( key-by)] <s generated />
@@ -115,6 +178,17 @@ toc_max_heading_level: 4
 ### set_text <s generated />
 
 <s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <s generated />
+
+Adds an action to ActionChain to enter text for a specific object.
+
+##### Usage
+
+```python
+gamium
+  .actions()
+  .set_text(By.path('/Canvas[1]/Panel[1]/InputField[1]/Text[1]'), 'Hello World')
+  .perform()
+```
 
 ##### Arguments <s generated />
 
@@ -129,6 +203,14 @@ toc_max_heading_level: 4
 ### sleep <s generated />
 
 <s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <s generated />
+
+Add an empty time in the middle of the ActionChain.
+
+##### Usage
+
+```python
+gamium.actions().sleep(300).set_text(text1, 'Hello World').perform()
+```
 
 ##### Arguments <s generated />
 
