--- a/docs/docs/api/client/python/classes/action-result.mdx
+++ b/docs/docs/api/client/python/classes/action-result.mdx
@@ -7,3 +7,12 @@ toc_max_heading_level: 4
 
 <hr class="solid" />  <s generated />
 
+
+## Properties <s generated />
+
+#### error [`ErrorResult`]( error-result) <s generated />
+
+- Contains error information in case of action failure.
+
+<hr class="solid" />  <s generated />
+
