--- a/docs/docs/api/client/python/classes/error-code.mdx
+++ b/docs/docs/api/client/python/classes/error-code.mdx
@@ -5,6 +5,8 @@ toc_max_heading_level: 4
 
 # ErrorCode <s generated />
 
+Defines the error code that occurs in communication between the Gamium Engine and the Gamium Client.
+
 <hr class="solid" />  <s generated />
 
 ## Properties <s generated />
