--- a/docs/docs/api/client/python/classes/gamium-error.mdx
+++ b/docs/docs/api/client/python/classes/gamium-error.mdx
@@ -24,9 +24,13 @@ toc_max_heading_level: 4
 
 #### code [`int`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
 
+- Code that distinguishes errors
+
 <hr class="solid" />  <s generated />
 
 #### message [`str`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
+
+- String describing the cause of the error.
 
 <hr class="solid" />  <s generated />
 
