--- a/docs/docs/api/client/python/classes/key-by.mdx
+++ b/docs/docs/api/client/python/classes/key-by.mdx
@@ -6,6 +6,8 @@ toc_max_heading_level: 4
 
 # KeyBy <s generated />
 
+The class used to request keystrokes in [Game Controling](../../../../docs/client/game-control)
+
 <hr class="solid" />  <s generated />
 
 ## Methods <s generated />
@@ -13,6 +15,14 @@ toc_max_heading_level: 4
 ### unity_keyboard <s generated />
 
 <s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='static'/> <s generated />
+
+The type used by projects with [Unity Input System]( https://docs.unity3d.com/Packages/com.unity.inputsystem@latest) to enter the keyboard.
+
+##### Usage
+
+```python
+gamium.send_key(KeyBy.unity_keyboard('Space'))
+```
 
 ##### Arguments <s generated />
 
@@ -23,6 +33,14 @@ toc_max_heading_level: 4
 ### unity_keycode <s generated />
 
 <s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='static'/> <s generated />
+
+The type that is used for keyboard input in projects with [Unity Input Manager]( https://docs.unity3d.com/Manual/class-InputManager.html) .
+
+##### Usage
+
+```python
+gamium.send_key(KeyBy.unity_keycode('Space'))
+```
 
 ##### Arguments <s generated />
 
