--- a/docs/docs/api/client/python/classes/locator.mdx
+++ b/docs/docs/api/client/python/classes/locator.mdx
@@ -5,6 +5,8 @@ toc_max_heading_level: 4
 
 # Locator <s generated />
 
+A set of methods that can be used to locate an object.
+
 <hr class="solid" />  <s generated />
 
 #### [`By`]( by) <s generated />
