--- a/docs/docs/api/client/python/classes/object-type.mdx
+++ b/docs/docs/api/client/python/classes/object-type.mdx
@@ -5,13 +5,21 @@ toc_max_heading_level: 4
 
 # ObjectType <s generated />
 
+Indicates the type of object that was queried.
+
 <hr class="solid" />  <s generated />
 
 ## Properties <s generated />
 
 #### Unknown <s generated />
 
+- Objects not classified as specific types.
+
 #### UI <s generated />
 
+- UI Object.
+
 #### Camera <s generated />
+
+- Camera Object.
 
