--- a/docs/docs/api/client/python/classes/query-object-interactable-options.mdx
+++ b/docs/docs/api/client/python/classes/query-object-interactable-options.mdx
@@ -11,9 +11,13 @@ toc_max_heading_level: 4
 
 #### check_moving [`bool`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#boolean-values) <s generated />
 
+- Check if the object is moving. The default is true.
+
 <hr class="solid" />  <s generated />
 
 #### check_raycast [`bool`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#boolean-values) <s generated />
+
+- Check whether the object is selected by Raycast. The default is true.
 
 <hr class="solid" />  <s generated />
 
