--- a/docs/docs/api/client/python/classes/query-screen-result.mdx
+++ b/docs/docs/api/client/python/classes/query-screen-result.mdx
@@ -11,9 +11,13 @@ toc_max_heading_level: 4
 
 #### width [`int`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
 
+- Screen Horizontal Length
+
 <hr class="solid" />  <s generated />
 
 #### height [`int`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
+
+- Screen Vertical Length
 
 <hr class="solid" />  <s generated />
 
