--- a/docs/docs/api/client/python/classes/rpc-by.mdx
+++ b/docs/docs/api/client/python/classes/rpc-by.mdx
@@ -6,6 +6,8 @@ toc_max_heading_level: 4
 
 # RpcBy <s generated />
 
+Class used by [Remote Procedure Call](../../../../docs/client/rpc) when calling remote functions.
+
 <hr class="solid" />  <s generated />
 
 ## Methods <s generated />
@@ -13,6 +15,14 @@ toc_max_heading_level: 4
 ### field <s generated />
 
 <s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='static'/> <s generated />
+
+Gets the value of a specific field
+
+##### Usage
+
+```python
+field = gamium.execute_rpc(RpcBy.field('Gamium.Private.CodebaseSample', 'field'))
+```
 
 ##### Arguments <s generated />
 
@@ -26,6 +36,14 @@ toc_max_heading_level: 4
 
 <s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='static'/> <s generated />
 
+Invokes a specific function.
+
+##### Usage
+
+```python
+gamium.execute_rpc(RpcBy.method('Gamium.Private.CodebaseSample', 'CallParam1', 10))
+```
+
 ##### Arguments <s generated />
 
 - class_path [`str`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
@@ -37,6 +55,14 @@ toc_max_heading_level: 4
 ### property <s generated />
 
 <s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='static'/> <s generated />
+
+Get the value of specific professional profile
+
+##### Usage
+
+```python
+property = gamium.execute_rpc(RpcBy.property('Gamium.Private.CodebaseSample', 'property'))
+```
 
 ##### Arguments <s generated />
 
