--- a/docs/docs/api/client/python/classes/rpc-locator.mdx
+++ b/docs/docs/api/client/python/classes/rpc-locator.mdx
@@ -5,6 +5,8 @@ toc_max_heading_level: 4
 
 # RpcLocator <s generated />
 
+The set of methods used to run the Remote Procedure Call.
+
 <hr class="solid" />  <s generated />
 
 #### [`RpcBy`]( rpc-by) <s generated />
