--- a/docs/docs/api/client/python/classes/send-key-options.mdx
+++ b/docs/docs/api/client/python/classes/send-key-options.mdx
@@ -11,5 +11,7 @@ toc_max_heading_level: 4
 
 #### duration_ms [`int`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
 
+- When entering the key, specify 'milisseconds' between down and up. The default is 100.
+
 <hr class="solid" />  <s generated />
 
