--- a/docs/docs/api/client/python/classes/unity-key-code.mdx
+++ b/docs/docs/api/client/python/classes/unity-key-code.mdx
@@ -5,6 +5,9 @@ toc_max_heading_level: 4
 
 # UnityKeyCode <s generated />
 
+The type that is used for keyboard input in projects with [Unity Input Manager]( https://docs.unity3d.com/Manual/class-InputManager.html) .
+Created by referring to [KeyCode]( https://docs.unity3d.com/kr/2021.3/ScriptReference/KeyCode.html) .
+
 <hr class="solid" />  <s generated />
 
 ## Properties <s generated />
