--- a/docs/docs/api/client/python/classes/unity-keyboard.mdx
+++ b/docs/docs/api/client/python/classes/unity-keyboard.mdx
@@ -5,6 +5,9 @@ toc_max_heading_level: 4
 
 # UnityKeyboard <s generated />
 
+The type used by projects with [Unity Input System]( https://docs.unity3d.com/Packages/com.unity.inputsystem@latest) to enter the keyboard.
+created with reference to [Enum Key]( https://docs.unity3d.com/Packages/com.unity.inputsystem@1.5/api/UnityEngine.InputSystem.Key.html) .
+
 <hr class="solid" />  <s generated />
 
 ## Properties <s generated />
