--- a/docs/docs/api/client/python/classes/vector3.mdx
+++ b/docs/docs/api/client/python/classes/vector3.mdx
@@ -5,6 +5,8 @@ toc_max_heading_level: 4
 
 # Vector3 <s generated />
 
+Class representing 3D vectors and points.
+
 <hr class="solid" />  <s generated />
 
 ## Methods <s generated />
