--- a/docs/docs/api/client/typescript/classes/by.mdx
+++ b/docs/docs/api/client/typescript/classes/by.mdx
@@ -21,7 +21,7 @@ Use the Object Path to locate the object.
 ##### Usage
 
 ```ts
-const cameraObj = await gamium.findObject(By.path('/Main Camera[1]'));
+const cameraInfo = await gamium.find(By.path('/Main Camera[1]'));
 ```
 
 ##### Arguments <s generated />
@@ -45,7 +45,7 @@ Use the Object Tag to locate the object.
 ##### Usage
 
 ```ts
-const cameraObj = await gamium.findObject(By.tag('MainCamera'));
+const cameraInfo = await gamium.find(By.tag('MainCamera'));
 ```
 
 ##### Arguments <s generated />
