--- a/docs/docs/api/client/python/classes/action-drag-options.mdx
+++ b/docs/docs/api/client/python/classes/action-drag-options.mdx
@@ -11,9 +11,13 @@ toc_max_heading_level: 4
 
 #### duration_ms [`int`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
 
+- Specifies the overall drag duration miliseconds. The default is 300.
+
 <hr class="solid" />  <s generated />
 
 #### interval_ms [`int`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
+
+- When dragging, I send the mouse move several times by dividing it into small pieces. Specifies the interval milliseconds for each mouse move event. The default is 60.
 
 <hr class="solid" />  <s generated />
 
