--- a/docs/docs/api/client/python/classes/action-scroll-options.mdx
+++ b/docs/docs/api/client/python/classes/action-scroll-options.mdx
@@ -11,5 +11,7 @@ toc_max_heading_level: 4
 
 #### duration_ms [`int`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
 
+- Set the milliseconds to request 'scroll' and wait for completion. The default is 300 ms.
+
 <hr class="solid" />  <s generated />
 
