--- a/docs/docs/api/client/python/classes/error-result.mdx
+++ b/docs/docs/api/client/python/classes/error-result.mdx
@@ -11,9 +11,13 @@ toc_max_heading_level: 4
 
 #### code [`int`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
 
+- Code that distinguishes errors. the [ErrorCode](error-code) field value is assigned.
+
 <hr class="solid" />  <s generated />
 
 #### reason [`str`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
+
+- String describing the cause of the error.
 
 <hr class="solid" />  <s generated />
 
