--- a/docs/docs/api/client/python/classes/execute-rpc-options.mdx
+++ b/docs/docs/api/client/python/classes/execute-rpc-options.mdx
@@ -11,5 +11,7 @@ toc_max_heading_level: 4
 
 #### cast_number_to_float [`bool`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#boolean-values) <s generated />
 
+- When calling the `execute_rpc` function, it determines whether the values of type number of parameters are converted to float and passed. The default value is 'true'.
+
 <hr class="solid" />  <s generated />
 
