--- a/docs/docs/api/client/python/classes/find-object-options.mdx
+++ b/docs/docs/api/client/python/classes/find-object-options.mdx
@@ -11,5 +11,7 @@ toc_max_heading_level: 4
 
 #### delay_ms [`int`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
 
+- Set the milliseconds to wait after completion of 'findObject'. The default is 60 ms.
+
 <hr class="solid" />  <s generated />
 
