--- a/docs/docs/api/client/python/classes/object-locator-by.mdx
+++ b/docs/docs/api/client/python/classes/object-locator-by.mdx
@@ -5,11 +5,17 @@ toc_max_heading_level: 4
 
 # ObjectLocatorBy <s generated />
 
+This method is used to find objects.
+
 <hr class="solid" />  <s generated />
 
 ## Properties <s generated />
 
 #### Path <s generated />
 
+- Use the Object Path to locate the object.
+
 #### Tag <s generated />
+
+- Use the Object Tag to locate the object.
 
