--- a/docs/docs/api/client/python/classes/player.mdx
+++ b/docs/docs/api/client/python/classes/player.mdx
@@ -6,6 +6,8 @@ toc_max_heading_level: 4
 
 # Player <s generated />
 
+Indicates the player that the user plays.
+
 <hr class="solid" />  <s generated />
 
 ## Methods <s generated />
@@ -13,6 +15,15 @@ toc_max_heading_level: 4
 ### is_near <s generated />
 
 <s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <s generated />
+
+Verify that the GameObject and other GameObject are within a certain distance.
+
+##### Usage
+
+```python
+player = gamium.player(By.path('Object path'))
+player.is_near(By.path('Another object path'), 10)
+```
 
 ##### Arguments <s generated />
 
@@ -25,6 +36,15 @@ toc_max_heading_level: 4
 ### move <s generated />
 
 <s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <s generated />
+
+Move the Player to a specific position.
+
+##### Usage
+
+```python
+player = gamium.player(By.path('Object path'))
+player.move(By.path('Camera object path'), By.path('Dest Object path'), MovePlayerOptions(MovePlayerBy.Navigation))
+```
 
 ##### Arguments <s generated />
 
@@ -43,6 +63,15 @@ toc_max_heading_level: 4
 ### refresh <s generated />
 
 <s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <s generated />
+
+Updates the information that the object has.
+
+##### Usage
+
+```python
+player = gamium.player(By.path('Object path'))
+player.refresh()
+```
 
 <hr class="solid" />  <s generated />
 
