--- a/docs/docs/api/client/python/classes/query-profile-result.mdx
+++ b/docs/docs/api/client/python/classes/query-profile-result.mdx
@@ -11,5 +11,7 @@ toc_max_heading_level: 4
 
 #### fps [`float`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
 
+- Frames per second
+
 <hr class="solid" />  <s generated />
 
