--- a/docs/docs/api/client/python/classes/until.mdx
+++ b/docs/docs/api/client/python/classes/until.mdx
@@ -14,6 +14,16 @@ toc_max_heading_level: 4
 
 <s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='static'/> <s generated />
 
+- Wait until the UIElement received as a factor is interactive.
+
+##### Usage
+
+```python
+ok_button = ui.find(By.path('/Canvas[1]/Register[1]/OkBtn[1]'))
+gamium.wait(Until.element_interactable(ok_button))
+ok_button.click()
+```
+
 ##### Arguments <s generated />
 
 - param [`T`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.TypeVar) <s generated />
@@ -30,6 +40,14 @@ toc_max_heading_level: 4
 
 <s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='static'/> <s generated />
 
+- Wait until the object is found to the Locator, wait until the object is found.
+
+##### Usage
+
+```python
+okButton = gamium.wait(Until.object_located(By.path('/Canvas[1]/Register[1]/OkBtn[1]')))
+```
+
 ##### Arguments <s generated />
 
 - locator [`Locator`]( locator) <s generated />
@@ -45,6 +63,14 @@ toc_max_heading_level: 4
 ### objects_located <s generated />
 
 <s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='static'/> <s generated />
+
+- Wait until the Objects corresponding to the Locator received as a factor are found.
+
+##### Usage
+
+```python
+products = gamium.wait(Until.objects_located(By.path('/Canvas[1]/ShopView[1]//ProductSlot(Clone)')))
+```
 
 ##### Arguments <s generated />
 
