--- a/docs/docs/api/client/python/classes/vector2.mdx
+++ b/docs/docs/api/client/python/classes/vector2.mdx
@@ -5,6 +5,8 @@ toc_max_heading_level: 4
 
 # Vector2 <s generated />
 
+Class that represents 2D vectors and points.
+
 <hr class="solid" />  <s generated />
 
 ## Methods <s generated />
