--- a/docs/docs/api/client/python/classes/wait-options.mdx
+++ b/docs/docs/api/client/python/classes/wait-options.mdx
@@ -11,17 +11,25 @@ toc_max_heading_level: 4
 
 #### timeout_ms [`int`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
 
+- Maximum time milliseconds to try until successful. The default is 5000.
+
 <hr class="solid" />  <s generated />
 
 #### message [`str`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
+
+- This is a message that will be displayed together in the event of an error.
 
 <hr class="solid" />  <s generated />
 
 #### interval_ms [`int`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
 
+- Interval milliseconds for retry attempts. The default is 100.
+
 <hr class="solid" />  <s generated />
 
 #### ignore_error [`bool`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#boolean-values) <s generated />
+
+- Whether to ignore errors. The default is true.
 
 <hr class="solid" />  <s generated />
 
