docs: python docs, install

--- a/docs/docs/docs/get-started/quick-start.mdx
+++ b/docs/docs/docs/get-started/quick-start.mdx
@@ -12,7 +12,7 @@ This page will be based on Unity and TypeScript.
 
 #### Requirements
 
-- [Node.js](https://nodejs.org) >= 16.0.0
+- [Node.js](https://nodejs.org) 16.0.0 or later
 - [yarn](https://yarnpkg.com/)
 
 #### DoguRpgSample project
