--- a/docs/docs/docs/client/write-testscript.mdx
+++ b/docs/docs/docs/client/write-testscript.mdx
@@ -14,6 +14,38 @@ The following elements are required to run the [`Gamium Client`](../get-started/
 
 When the executable is ready, you can connect `Gamium Client` to a program that contains `Gamium Engine` to manipulate the UI, Object.
 
+## Install
+
+<Tabs groupId="language" defaultValue="ts">
+<TabItem value="ts" label="TypeScript" default>
+
+### Requirements
+
+- Node.js 16.0.0 or later
+
+[gamium package](https://www.npmjs.com/package/gamium) is available on npm.
+
+```bash
+npm install gamium
+```
+
+</TabItem>
+
+<TabItem value="py" label="Python" default>
+
+### Requirements
+
+- Python 3.9 or later
+
+[gamium package](https://pypi.org/project/gamium) is available on pypi.
+
+```bash
+pip install gamium
+```
+
+</TabItem>
+</Tabs>
+
 ## Connect with Gamium Engine
 
 <Tabs groupId="language" defaultValue="ts">
