wip: python poetry deploy

--- a/docs/docs/docs/contributing/development-guides/client-development/python.mdx
+++ b/docs/docs/docs/contributing/development-guides/client-development/python.mdx
@@ -5,4 +5,6 @@ title: Python
 
 # Gamium Client for Python
 
-🚧 **work in progress**
+Gamium Client for Python is located in the `client/python/gamium` folder from the source root.
+
+This project was organized through poetry.
