docs: python gamium client

--- a/docs/docs/api/api-reference.mdx
+++ b/docs/docs/api/api-reference.mdx
@@ -10,3 +10,5 @@ Check the pages below first.
 - Client
   - TypeScript
     - [Gamium Client](client/typescript/classes/gamium-client)
+  - Python
+    - [Gamium Client](client/python/classes/gamium-client)
