--- a/docs/docs/docs/contributing/development-guides/client-development/overview.mdx
+++ b/docs/docs/docs/contributing/development-guides/client-development/overview.mdx
@@ -14,4 +14,4 @@ If you want to use a language that is not listed below, please [**contact us**](
 | ---------- | ------------ |
 | TypeScript | 4.7.4        |
 | Python     | 3.9 or later |
-| C#         | Coming soon  |
+| C#         | Planned      |
