docs: update gamium contribute docs for ts, py

--- a/docs/docs/docs/client/write-testscript.mdx
+++ b/docs/docs/docs/client/write-testscript.mdx
@@ -21,12 +21,15 @@ When the executable is ready, you can connect `Gamium Client` to a program that 
 
 ### Requirements
 
-- Node.js 16.0.0 or later
+- [Node.js](https://nodejs.org) 16.0.0 or later
+- [yarn](https://yarnpkg.com/)
+- [TypeScript](https://www.typescriptlang.org/) 4.7.4
 
 [gamium package](https://www.npmjs.com/package/gamium) is available on npm.
+You can also install it through yarn.
 
 ```bash
-npm install gamium
+yarn install gamium
 ```
 
 </TabItem>
