--- a/docs/docs/docs/contributing/pull-requests.mdx
+++ b/docs/docs/docs/contributing/pull-requests.mdx
@@ -1,18 +1,14 @@
 ---
-sidebar_position: 2
+sidebar_position: 10
 title: Pull Requests
 toc_max_heading_level: 4
 ---
 
 # Pull Requests
 
-import TOCInline from '@theme/TOCInline';
+### Setting up your local environment
 
-<TOCInline toc={toc} />
-
-## Setting up your local environment
-
-### Step 1: Fork
+#### Fork
 
 Fork the project on GitHub and clone your fork locally.
 
@@ -23,21 +19,21 @@ $ git remote add upstream https://github.com/dogu-team/gamium.git
 $ git fetch upstream
 ```
 
-### Step 2: Build
+#### Build
 
 Build steps and dependencies differ slightly depending on your game engine. See these detailed guides on building Gamium locally:
 
-#### Engine
+##### Engine
 
-- [**Gamium Engine Unity SDK**](development-guides/engine-development/unity)
+- [**Gamium Engine Unity SDK**](./engine-development/unity)
 
-#### Client
+##### Client
 
-- [**Gamium Client for TypeScript**](development-guides/client-development/typescript)
+- [**Gamium Client for TypeScript**](./client-development/typescript)
 
 Once you've built the project locally, you're ready to start making changes!
 
-### Step 3: Branch
+#### Branch
 
 To keep your development environment organized, create local branches to hold your work. These should be branched directly off of the main branch.
 
@@ -45,9 +41,9 @@ To keep your development environment organized, create local branches to hold yo
 git checkout -b my-branch -t upstream/main
 ```
 
-## Making Changes
+### Making Changes
 
-### Step 4: Code
+#### Code
 
 Most pull requests opened against the dogu-team/gamium repository include changes to either the protocol in the protocol/ folder, the client in the client/ folder, the engine in the engine/ folder, the documentation in docs/ folder.
 
@@ -55,7 +51,7 @@ Please be sure to run `yarn run newbie` from the root of the project to run the 
 
 See coding style for more information about best practice when modifying code in different parts of the project.
 
-### Step 5: Commit
+#### Commit
 
 It is recommended to keep your changes grouped logically within individual commits. Many contributors find it easier to review changes that are split across multiple commits. There is no limit to the number of commits in a pull request.
 
@@ -66,7 +62,7 @@ $ git commit
 
 Note that multiple commits get squashed when they are landed.
 
-#### Commit message guidelines
+##### Commit message guidelines
 
 A good commit message should describe what changed and why. The Gamium project uses [**semantic commit messages**](https://conventionalcommits.org/) to streamline the release process.
 
@@ -98,13 +94,13 @@ Other things to keep in mind when writing a commit message:
 2. Keep the second line blank.
 3. Wrap all other lines at 72 columns.
 
-#### Breaking Changes
+##### Breaking Changes
 
 A commit that has the text BREAKING CHANGE: at the beginning of its optional body or footer section introduces a breaking API change (correlating with Major in semantic versioning). A breaking change can be part of commits of any type. e.g., a fix:, feat: & chore: types would all be valid, in addition to any other type.
 
 See [**conventionalcommits.org**](https://conventionalcommits.org/) for more details.
 
-### Step 6: Rebase
+#### Rebase
 
 Once you have committed your changes, it is a good idea to use `git rebase` (not `git merge1`) to synchronize your work with the main repository.
 
@@ -115,9 +111,9 @@ $ git rebase upstream/main
 
 This ensures that your working branch has the latest changes from `dogu-team/gamium` main.
 
-### Step 7: Test
+### Test
 
-Bug fixes and features should always come with tests. A [**testing guide**](development-guides/testing) has been provided to make the process easier. Looking at other tests to see how they should be structured can also help.
+Bug fixes and features should always come with tests. A [**testing guide**](./testing) has been provided to make the process easier. Looking at other tests to see how they should be structured can also help.
 
 Before submitting your changes in a pull request, always run the full test suite. To run the tests:
 
@@ -127,7 +123,7 @@ yarn run test
 
 Make sure the linter does not report any issues and that all tests pass. Please do not submit patches that fail either check.
 
-### Step 8: Push
+### Push
 
 Once your commits are ready to go -- with passing tests and linting -- begin the process of opening a pull request by pushing your working branch to your fork on GitHub.
 
@@ -135,13 +131,13 @@ Once your commits are ready to go -- with passing tests and linting -- begin the
 $ git push origin my-branch
 ```
 
-### Step 9: Opening the Pull Request
+#### Opening the Pull Request
 
 From within GitHub, opening a new pull request will present you with a template that should be filled out. It can be found [**here**](https://github.com/dogu-team/gamium/blob/main/.github/PULL_REQUEST_TEMPLATE.md).
 
 If you do not adequately complete this template, your PR may be delayed in being merged as maintainers seek more information or clarify ambiguities.
 
-### Step 10: Discuss and Update
+#### Discuss and Update
 
 You will probably get feedback or requests for changes to your pull request. This is a big part of the submission process so don't be discouraged! Some contributors may sign off on the pull request right away. Others may have detailed comments or feedback. This is a necessary part of the process in order to evaluate whether the changes are correct and necessary.
 
@@ -157,19 +153,19 @@ There are a number of more advanced mechanisms for managing commits using `git r
 
 Feel free to post a comment in the pull request to ping reviewers if you are awaiting an answer on something. If you encounter words or acronyms that seem unfamiliar, refer to this [**glossary**](https://chromium.googlesource.com/chromiumos/docs/+/HEAD/glossary.md).
 
-## Approval and Request Changes Workflow
+### Approval and Request Changes Workflow
 
 All pull requests require approval from a [**Code Owner**](https://github.com/dogu-team/gamium/blob/main/.github/CODEOWNERS) of the area you modified in order to land. Whenever a maintainer reviews a pull request they may request changes. These may be small, such as fixing a typo, or may involve substantive changes. Such requests are intended to be helpful, but at times may come across as abrupt or unhelpful, especially if they do not include concrete suggestions on how to change them.
 
 Try not to be discouraged. If you feel that a review is unfair, say so or seek the input of another project contributor. Often such comments are the result of a reviewer having taken insufficient time to review and are not ill-intended. Such difficulties can often be resolved with a bit of patience. That said, reviewers should be expected to provide helpful feedback.
 
-### Step 11: Landing
+#### Step 11: Landing
 
 In order to land, a pull request needs to be reviewed and approved by at least one Gamium Code Owner and pass CI. After that, if there are no objections from other contributors, the pull request can be merged.
 
 Congratulations and thanks for your contribution!
 
-## Continuous Integration Testing
+### Continuous Integration Testing
 
 Every pull request is tested on the Continuous Integration (CI) system to confirm that it works on Gamium's supported platforms.
 
