--- a/docs/docs/docs/contributing/issues.mdx
+++ b/docs/docs/docs/contributing/issues.mdx
@@ -1,15 +1,12 @@
 ---
-sidebar_position: 1
+sidebar_position: 9
+toc_max_heading_level: 4
 title: Issues In Gamium
 ---
 
 # Issues In Gamium
 
-import TOCInline from '@theme/TOCInline';
-
-<TOCInline toc={toc} />
-
-## How to Contribute to Issues
+#### How to Contribute to Issues
 
 For any issue, there are fundamentally three ways an individual can contribute:
 
@@ -17,11 +14,11 @@ For any issue, there are fundamentally three ways an individual can contribute:
 2. By helping to triage the issue: You can do this either by providing assistive details (a reproducible test case that demonstrates a bug) or by providing suggestions to address the issue.
 3. By helping to resolve the issue: This can be done by demonstrating that the issue is not a bug or is fixed; but more often, by opening a pull request that changes the source in dogu-team/gamium in a concrete and reviewable manner.
 
-## Asking for General Help
+#### Asking for General Help
 
 [**The Gamium website**](https://gamium.dogutech.io) has a list of resources for getting programming help, contributing, and more. please look at the document and use the issue tracker for unresolved issues.
 
-## Submitting a Bug Report
+#### Submitting a Bug Report
 
 To submit a bug report:
 
@@ -33,7 +30,7 @@ The two most important pieces of information needed to evaluate the report are a
 
 See [**How to create a Minimal, Complete, and Verifiable example**](https://stackoverflow.com/help/mcve).
 
-## Triaging a Bug Report
+#### Triaging a Bug Report
 
 It's common for open issues to involve discussion. Some contributors may have differing opinions, including whether the behavior is a bug or feature. This discussion is part of the process and should be kept focused, helpful, and professional.
 
@@ -41,6 +38,6 @@ Terse responses that provide neither additional context nor supporting detail ar
 
 Contributors are encouraged to solve issues collaboratively and help one another make progress. If you encounter an issue that you feel is invalid, or which contains incorrect information, explain _why_ you feel that way with additional supporting context, and be willing to be convinced that you may be wrong. By doing so, we can often reach the correct outcome faster.
 
-## Resolving a Bug Report
+#### Resolving a Bug Report
 
 Most issues are resolved by opening a pull request. The process for opening and reviewing a pull request is similar to that of opening and triaging issues, but carries with it a necessary review and approval workflow that ensures that the proposed changes meet the minimal quality and functional guidelines of the Gamium project.
