--- a/docs/docs/docs/contributing/pull-requests.mdx
+++ b/docs/docs/docs/contributing/pull-requests.mdx
@@ -159,7 +159,7 @@ All pull requests require approval from a [**Code Owner**](https://github.com/do
 
 Try not to be discouraged. If you feel that a review is unfair, say so or seek the input of another project contributor. Often such comments are the result of a reviewer having taken insufficient time to review and are not ill-intended. Such difficulties can often be resolved with a bit of patience. That said, reviewers should be expected to provide helpful feedback.
 
-#### Step 11: Landing
+#### Landing
 
 In order to land, a pull request needs to be reviewed and approved by at least one Gamium Code Owner and pass CI. After that, if there are no objections from other contributors, the pull request can be merged.
 
