docs: update python client doc

--- a/docs/docs/docs/client/write-testscript.mdx
+++ b/docs/docs/docs/client/write-testscript.mdx
@@ -70,7 +70,8 @@ const ui = gamium.ui();
 ```python
 from gamium import *
 
-gamium = GamiumClient("127.0.0.1", 50061)
+service = TcpGamiumService("127.0.0.1", 50061)
+gamium = GamiumClient(service)
 gamium.connect()
 ui = gamium.ui()
 ```
