--- a/docs/docs/api/client/python/classes/gamium-client.mdx
+++ b/docs/docs/api/client/python/classes/gamium-client.mdx
@@ -16,7 +16,8 @@ The `Gamium Client` can be used as follows.
 ```python
 from gamium import *
 
-gamium = GamiumClient("127.0.0.1", 50061)
+service = TcpGamiumService("127.0.0.1", 50061)
+gamium = GamiumClient(service)
 gamium.connect()
 ```
 
