docs: update more detail

--- a/docs/docs/docs/engine/unity/project-configuration.mdx
+++ b/docs/docs/docs/engine/unity/project-configuration.mdx
@@ -32,7 +32,7 @@ The source code and example project for the Gamium Engine SDK can be found at th
 ## 2. Add Scripting Define Symbol
 
 A `Scripting Define Symbol` called **`USE_GAMIUM`** is required for `Gamium` to work. **Only when `USE_GAMIUM`** is defined will the `Gamium Engine` run normally.
-Go to the topic `Other Settings -> Script Compilation` using the [Custom scripting symbols](https://docs.unity3d.com/Manual/CustomScriptingSymbols.html) guide and add **`USE_GAMIUM`**).
+Go to `Edit -> Project Settings -> Player -> Other Settings -> Script Compilation` using the [Custom scripting symbols](https://docs.unity3d.com/Manual/CustomScriptingSymbols.html) guide and add **`USE_GAMIUM`**).
 
 :::tip
 The `Gamium Engine SDK` has been added to the project, but if you do not want to run `Gamium Engine`, you must turn off **`USE_GAMIUM`**.
