docs: update language support

--- a/docs/docs/docs/get-started/introduction.mdx
+++ b/docs/docs/docs/get-started/introduction.mdx
@@ -27,6 +27,7 @@ You can request virtual input such as a game status query, keyboard, mouse, etc.
 The following `Gamium Client SDK` are currently supported.
 
 - [Typescript](../client/write-testscript)
+- [Python](../client/write-testscript)
 
 ### Diagram
 
