--- a/docs/docs/docs/get-started/quick-start.mdx
+++ b/docs/docs/docs/get-started/quick-start.mdx
@@ -16,7 +16,7 @@ This page will be based on Unity and TypeScript.
 
 - [Node.js](https://nodejs.org) 16.0.0 or later
 - [yarn](https://yarnpkg.com/)
-- [TypeScript](https://www.typescriptlang.org/) 4.7.4
+- Python 3.9 or later
 
 #### DoguRpgSample project
 
