--- a/docs/docs/docs/engine/unity/project-configuration.mdx
+++ b/docs/docs/docs/engine/unity/project-configuration.mdx
@@ -18,7 +18,7 @@ The `Gamium Engine SDK` performs the functions requested by the `Gamium Client` 
 In [Project manifest](https://docs.unity3d.com/Manual/upm-manifestPrj.html), add to `dependencies` as follows.
 
 ```
-"com.dogu.gamium.engine.unity": "https://github.com/dogu-team/gamium.git?path=/engine/unity#latest",
+"com.dogu.gamium.engine.unity": "https://github.com/dogu-team/gamium.git?path=/engine/unity#2.0.9",
 ```
 
 :::info
