--- a/docs/docs/docs/engine/unity/Input-configuration.mdx
+++ b/docs/docs/docs/engine/unity/Input-configuration.mdx
@@ -13,8 +13,8 @@ Go to [`Project Settings`](https://docs.unity3d.com/Manual/comp-ManagerGroup.htm
 
 ## When using Input Manager
 
-Unity [`Input`](https://docs.unity3d.com/ScriptReference/Input.html) You need to modify where you use the class to use `Gamium.Input`.
-Please use [`using`](https://learn.microsoft.com/en-us/dotnet/csharp/language-reference/keywords/using-directive) to `alias` at the top of the file as shown below.
+You need to modify where you use the class [`UnityEngine.Input`](https://docs.unity3d.com/ScriptReference/Input.html) to use `Gamium.Input`.
+Use a [`using`](https://learn.microsoft.com/en-us/dotnet/csharp/language-reference/keywords/using-directive) directive as shown below to alias it to use Gamium.Input rather than the existing Input.
 
 :::info
 Gamium.Input provides the same API as UnityInput.
