docs: update custom domain to github docs domain

--- a/docs/docs/docs/contributing/issues.mdx
+++ b/docs/docs/docs/contributing/issues.mdx
@@ -16,7 +16,7 @@ For any issue, there are fundamentally three ways an individual can contribute:
 
 #### Asking for General Help
 
-[**The Gamium website**](https://gamium.dogutech.io) has a list of resources for getting programming help, contributing, and more. please look at the document and use the issue tracker for unresolved issues.
+[**The Gamium website**](https://dogu-team.github.io/gamium) has a list of resources for getting programming help, contributing, and more. please look at the document and use the issue tracker for unresolved issues.
 
 #### Submitting a Bug Report
 
