--- a/docs/docs/docs/contributing/source-code-organization.mdx
+++ b/docs/docs/docs/contributing/source-code-organization.mdx
@@ -16,7 +16,7 @@ A quick look at how the gamium repository is structured.
     - [TypeScript](./client-development/typescript)
     - [Python](./client-development/python)
 - `docs`
-  - This is where the documents to create the current page https://gamium.dogutech.io/ are written. Created via [Docusaurus](https://docusaurus.io/).
+  - This is where the documents to create the current page https://dogu-team.github.io/gamium are written. Created via [Docusaurus](https://docusaurus.io/).
 - `engine`
   - Gamium Engine codes applied to various game engines are located.
   - For details, please refer to the documentation for each engine.
